# ml-io

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  UBSan.supp  conda-env.yml  iwyu.imp  pytest.ini
contrib/: CMakeLists.txt  README.md
contrib/insights/: CMakeLists.txt  README.md
contrib/insights/src/: column_analyzer.cxx  column_analyzer.h  column_statistics.h  insights.cxx  insights.h  module.cxx  module.h  utils.cxx  utils.h
contrib/insights/src/hll/: hyperloglog.cxx  hyperloglog.h  xxh3.h
src/mlio/: CMakeLists.txt  config.cc  coo_tensor_builder.cc  coo_tensor_builder.cxx  coo_tensor_builder.h  cpu_array.cc  cpu_array.cxx  csv_reader.cc  csv_reader.cxx  csv_record_tokenizer.cc  csv_record_tokenizer.cxx  csv_record_tokenizer.h  data_reader.cc  data_reader.cxx  data_reader_base.cc  data_reader_base.cxx  data_reader_error.cc  data_reader_error.cxx  data_type.cc  data_type.cxx  default_instance_reader.cxx  default_instance_reader.h  device.cc  device.cxx  device_array.cc  device_array.cxx  example.cc  example.cxx  image_reader.cc  image_reader.cxx  init.cc  init.cxx  init_aws.cc  init_aws.cxx  instance.cc  instance.cxx  instance_batch.cc  instance_batch.cxx  instance_batch_reader.cc  instance_batch_reader.cxx  (+38 more)
src/mlio-py/: CMakeLists.txt  README.md  setup.py
src/mlio-py/mlio/: __init__.py
src/mlio-py/mlio/contrib/: README.md
src/mlio-py/mlio/contrib/insights/: CMakeLists.txt  README.md  column_analyzer.cc  column_analyzer.cxx  column_analyzer.h  column_statistics.h  module.cc  module.cxx  utils.cc  utils.cxx  utils.h
src/mlio-py/mlio/core/: CMakeLists.txt  data_reader.cc  data_reader.cxx  data_readers.cxx  data_store.cc  data_store.cxx  data_stores.cxx  error.cc  error.cxx  example.cc  example.cxx  exceptions.cxx  integ.cc  integ.cxx  logging.cc  logging.cxx  memory.cc  memory.cxx  module.cc  module.cxx  module.h  py_buffer.cc  py_buffer.cxx  py_buffer.h  py_device_array.cc  py_device_array.cxx  py_device_array.h  py_memory_block.cc  py_memory_block.cxx  py_memory_block.h  record_reader.cc  record_reader.cxx  record_readers.cxx  s3_client.cc  s3_client.cxx  schema.cc  schema.cxx  stream.cc  stream.cxx  streams.cxx  (+2 more)
src/mlio-py/mlio/integ/: dlpack.py  mxnet.py  numpy.py  pandas.py  scipy.py  tensorflow.py  torch.py
src/mlio-py/mlio/integ/arrow/: CMakeLists.txt  arrow_buffer.cc  arrow_buffer.cxx  arrow_buffer.h  arrow_file.cc  arrow_file.cxx  arrow_file.h  arrow_util.h  module.cc  module.cxx
src/mlio/data_stores/: compression.cc  compression.cxx  data_store.cc  data_store.cxx  file.cc  file.cxx  file_hierarchy.cxx  file_list.cc  file_list.cxx  in_memory_store.cc  in_memory_store.cxx  s3_object.cc  s3_object.cxx  sagemaker_pipe.cc  sagemaker_pipe.cxx
src/mlio/data_stores/detail/: file_util.cxx  file_util.h  util.cc  util.cxx  util.h
src/mlio/detail/: error.h  path.cc  path.h  pathname.cc  pathname.cxx  pathname.h  s3_utils.cc  s3_utils.cxx  s3_utils.h  system_call.h  system_info.cc  system_info.cxx  system_info.h  thread.h
src/mlio/detail/protobuf/: CMakeLists.txt  recordio_protobuf.proto
src/mlio/instance_readers/: core_instance_reader.cc  core_instance_reader.cxx  core_instance_reader.h  instance_reader.cc  instance_reader.cxx  instance_reader.h  instance_reader_base.cc  instance_reader_base.cxx  instance_reader_base.h  ranged_instance_reader.cc  ranged_instance_reader.cxx  ranged_instance_reader.h  sampled_instance_reader.cc  sampled_instance_reader.cxx  sampled_instance_reader.h  sharded_instance_reader.cc  sharded_instance_reader.cxx  sharded_instance_reader.h  shuffled_instance_reader.cc  shuffled_instance_reader.cxx  shuffled_instance_reader.h
src/mlio/integ/: dlpack.cc  dlpack.cxx
src/mlio/memory/: external_memory_block.cc  external_memory_block.cxx  file_backed_memory_allocator.cc  file_backed_memory_allocator.cxx  file_backed_memory_block.cc  file_backed_memory_block.cxx  file_mapped_memory_block.cc  file_mapped_memory_block.cxx  heap_memory_allocator.cc  heap_memory_allocator.cxx  heap_memory_block.cc  heap_memory_block.cxx  memory_allocator.cc  memory_allocator.cxx  memory_block.cc  memory_block.cxx  memory_slice.cc  memory_slice.cxx  util.cc  util.cxx
src/mlio/platform/posix/data_stores/: file.cxx  file_hierarchy.cxx
src/mlio/record_readers/: blob_record_reader.cxx  corrupt_record_error.cxx  csv_record_reader.cc  csv_record_reader.cxx  csv_record_reader.h  parquet_record_reader.cc  parquet_record_reader.cxx  record_error.cc  record_error.cxx  record_reader.cc  record_reader.cxx  record_reader_base.cc  record_reader_base.cxx  record_too_large_error.cxx  recordio_record_reader.cc  recordio_record_reader.cxx  recordio_record_reader.h  stream_record_reader.cc  stream_record_reader.cxx  text_line_record_reader.cc  text_line_record_reader.cxx  text_line_record_reader.h  text_record_reader.cc  text_record_reader.cxx
src/mlio/record_readers/detail/: chunk_reader.cc  chunk_reader.cxx  chunk_reader.h  default_chunk_reader.cc  default_chunk_reader.cxx  default_chunk_reader.h  in_memory_chunk_reader.cc  in_memory_chunk_reader.cxx  in_memory_chunk_reader.h  recordio_header.cc  recordio_header.cxx  recordio_header.h  text_line.cc  text_line.cxx  text_line.h  util.h
src/mlio/streams/: file_input_stream.cc  file_input_stream.cxx  gzip_inflate_stream.cc  gzip_inflate_stream.cxx  input_stream.cc  input_stream.cxx  input_stream_base.cc  input_stream_base.cxx  memory_input_stream.cc  memory_input_stream.cxx  s3_input_stream.cc  s3_input_stream.cxx  sagemaker_pipe_input_stream.cc  sagemaker_pipe_input_stream.cxx  stream_error.cc  stream_error.cxx  utf8_input_stream.cc  utf8_input_stream.cxx
src/mlio/streams/detail/: iconv.cc  iconv.cxx  iconv.h  zlib.cc  zlib.cxx  zlib.h
src/mlio/util/: number.cc  number.cxx  string.cc  string.cxx
tests/mlio-test/: CMakeLists.txt  foo.cxx  test_image_reader.cc  test_image_reader.cxx  test_recordio_protobuf_reader.cc  test_recordio_protobuf_reader.cxx  test_text_line_reader.cc  test_text_line_reader.cxx
tests/mlio-test/record_readers/: test_blob_record_reader.cxx
(+132 files in other folders)
